--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
           <input class="form-control form-control-lg fw-bold" type="text" value="Payment Form" aria-label="Disabled input example" disabled readonly>
         </div>
         <div class="row">
-          <input class="form-control form-control-lg" type="text" placeholder="Some fields are missing" aria-label="Disabled input example" disabled>
+          <input class="form-control form-control-sm" type="text" placeholder="Some fields are missing" aria-label="Disabled input example" disabled>
         </div>
         <div class="row">
-          <div class="col-md-4">Card</div>
+          <div class="col-md-4">
+            <label for="card" class="form-label">Card #</label>
+            <input class="form-control form-control-sm" type="text" id="card" placeholder="xxxxxxxxxxxxxxx">
+          </div>
           <div class="col-md-3">CVC</div>
           <div class="col-md-3">AMOUNT</div>
         </div>
