--- a/index.html
+++ b/index.html
@@ -11,55 +11,58 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
   </style>
 </head>
 
 <body>
-  <div class="container border border-dark m-5">
+  <div class="container border border-dark m-5 g-5">
 
-    <form>
+    <form novalidate>
       <div class="row">
         <input class="form-control form-control-lg fw-bold" type="text" value="Payment Form"
           aria-label="Disabled input example" disabled readonly>
       </div>
       <div class="row">
-        <input class="form-control form-control-sm g-3" type="text" placeholder="Some fields are missing"
+        <input class="form-control form-control-sm g-3 bg-danger p-3" type="text" placeholder="Some fields are missing"
           aria-label="Disabled input example" disabled>
       </div>
       <div class="row">
         <div class="col-md-4">
           <label for="card" class="form-label">Card #</label>
-          <input class="form-control form-control-sm" type="number" id="card" placeholder="xxxxxxxxxxxxxxx">
+          <input class="form-control form-control-sm" type="number" id="card" placeholder="xxxxxxxxxxxxxxx" value="" required>
+          <div class="validate-feedback">Looks good</div>
         </div>
         <div class="col-md-3">
           <label for="cvc" class="form-label">CVC</label>
-          <input class="form-control form-control-sm" type="number" id="cvc" placeholder="000">
+          <input class="form-control form-control-sm" type="number" id="cvc" placeholder="000" required>
         </div>
         <div class="col-md-3">
           <label for="amount" class="form-label">Amount</label>
           <div class="input-group"><span class="input-group-addon">$</span>
-            <input class="form-control form-control-sm" type="number" id="amount" placeholder="Amount">
+            <input class="form-control form-control-sm" type="number" id="amount" placeholder="Amount" required>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
           <label for="firstName" class="form-label">First Name</label>
-          <input class="form-control form-control-sm" type="text" id="firstName">
+          <input class="form-control form-control-sm" type="text" id="firstName" required>
         </div>
         <div class="col-md-6">
           <label for="lastName" class="form-label">Last Name</label>
-          <input class="form-control form-control-sm" type="text" id="lastName">
+          <input class="form-control form-control-sm" type="text" id="lastName" required>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
           <label for="city" class="form-label">City</label>
-          <input class="form-control form-control-sm" type="text" id="city">
+          <input class="form-control form-control-sm" type="text" id="city" required>
         </div>
-        <div class="col-md-3 g-4">
-          <select class="form-select form-select-sm mt-2" aria-label="Default select example">
+        <div class="col-md-3">
+          <label for="Default select example" class="form-label">State</label>
+          <select class="form-select form-select-sm" aria-label="Default select example" required>
             <option selected>Pick a state</option>
             <option value="1">Alabama</option>
             <option value="2">Georgia</option>
@@ -70,12 +73,61 @@
 
         <div class="col-md-3">
           <label for="postCode" class="form-label">Postal Code</label>
-          <input class="form-control form-control-sm" type="number" id="postCode" placeholder="">
+          <input class="form-control form-control-sm" type="number" id="postCode" placeholder="" required>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h4>We accept:</h4>
+          <div class="d-inline-flex p-2 border" required>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="icon1" id="icon1" value="option1" checked>
+              <label class="form-check-label" for="icon1">
+                <i class="bi bi-piggy-bank"></i>
+              </label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="icon2" id="icon2" value="option2">
+              <label class="form-check-label" for="icon2">
+                <i class="bi bi-currency-bitcoin"></i>
+              </label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="icon3" id="icon3" value="option3">
+              <label class="form-check-label" for="icon3">
+                <i class="bi bi-credit-card"></i>
+              </label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="icon4" id="icon4" value="option4">
+              <label class="form-check-label" for="icon4">
+                <i class="bi bi-alipay"></i>
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <label for="floatingTextarea2">Message</label>
+          <div class="form-floating">
+
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+              style="height: 100px"></textarea>
+
+          </div>
+        </div>
+
+
+
+      </div>
+      <div class="row">
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end g-3 border p-3 bg-danger">
+          <button class="btn btn-secondary me-md-2" type="button">Close</button>
+          <button class="btn btn-primary" type="button">Send</button>
         </div>
       </div>
 
-    </form>
 
+    </form>
   </div>
 </body>
 
