--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 </head>
 
 <body>
-  <div class="container border border-dark m-5 g-5">
+  <div class="container-fluid justify-content-center border border-dark m-10 g-5">
 
-    <form novalidate>
+    <form>
+    <!--Both of these are read-only-->
       <div class="row">
         <input class="form-control form-control-lg fw-bold" type="text" value="Payment Form"
           aria-label="Disabled input example" disabled readonly>
@@ -28,11 +29,14 @@
         <input class="form-control form-control-sm g-3 bg-danger p-3" type="text" placeholder="Some fields are missing"
           aria-label="Disabled input example" disabled>
       </div>
+    <!--Here are the first three number inputs for your card information-->
       <div class="row">
         <div class="col-md-4">
           <label for="card" class="form-label">Card #</label>
           <input class="form-control form-control-sm" type="number" id="card" placeholder="xxxxxxxxxxxxxxx" value="" required>
-          <div class="validate-feedback">Looks good</div>
+          <!--This custom invalid feedback doesn't work without a script-->
+          <div class="invalid-feedback">Please enter your 15 digits card number</div>
+          <!--^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-->
         </div>
         <div class="col-md-3">
           <label for="cvc" class="form-label">CVC</label>
@@ -45,6 +49,7 @@
           </div>
         </div>
       </div>
+    <!--Simple text inputs for you to enter your name-->
       <div class="row">
         <div class="col-md-6">
           <label for="firstName" class="form-label">First Name</label>
@@ -55,6 +60,7 @@
           <input class="form-control form-control-sm" type="text" id="lastName" required>
         </div>
       </div>
+    <!--This is the dropdown selector to chose your state followed by your postal code. I think it should actually be a list with many options-->
       <div class="row">
         <div class="col-md-6">
           <label for="city" class="form-label">City</label>
@@ -68,20 +74,19 @@
             <option value="2">Georgia</option>
             <option value="3">Florida</option>
           </select>
-
         </div>
-
-        <div class="col-md-3">
+<div class="col-md-3">
           <label for="postCode" class="form-label">Postal Code</label>
           <input class="form-control form-control-sm" type="number" id="postCode" placeholder="" required>
         </div>
       </div>
+    <!--Here are the checkboxes named by icons for payment. These do not work properly-->
       <div class="row">
         <div class="col-md-6">
           <h4>We accept:</h4>
-          <div class="d-inline-flex p-2 border" required>
+          <div class="d-inline-flex p-2 border">
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="icon1" id="icon1" value="option1" checked>
+              <input class="form-check-input" type="radio" name="icon1" id="icon1" value="option1">
               <label class="form-check-label" for="icon1">
                 <i class="bi bi-piggy-bank"></i>
               </label>
@@ -106,23 +111,20 @@
             </div>
           </div>
         </div>
+      <!--This is the text input for message-->
         <div class="col-lg-6">
           <label for="floatingTextarea2">Message</label>
           <div class="form-floating">
-
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
               style="height: 100px"></textarea>
-
-          </div>
+            </div>
         </div>
-
-
-
       </div>
+      <!--     These are the submit and close buttons-->
       <div class="row">
         <div class="d-grid gap-2 d-md-flex justify-content-md-end g-3 border p-3 bg-danger">
           <button class="btn btn-secondary me-md-2" type="button">Close</button>
-          <button class="btn btn-primary" type="button">Send</button>
+          <button class="btn btn-primary" type="submit">Send</button>
         </div>
       </div>
 
